--- a/media.css
+++ b/media.css
@@ -1,1 +1,17 @@
 /* this is media query file */
+.container{
+    overflow: hidden;
+}
+.nav-toggle{
+    display:none;
+}
+@media screen and (max-width: 991px;){
+    .nav-toggle{
+        display:block;
+        margin-right: 20px;
+    }
+    .nav-links{
+        display:none;
+
+    }
+}
