--- a/media.css
+++ b/media.css
@@ -5,7 +5,11 @@
 .nav-toggle{
     display:none;
 }
-@media screen and (max-width: 991px;){
+.example-card{
+    height: 300px;
+
+}
+@media screen and (max-width: 991px){
     .nav-toggle{
         display:block;
         margin-right: 20px;
@@ -13,5 +17,48 @@
     .nav-links{
         display:none;
 
+    }
+    .example-area{
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    .example-card{
+        width: calc(50%-10px);
+        height: 180px;
+    }
+    .logos{
+        justify-content: space-evenly;
+
+    }
+}
+@media screen and (max-width: 767px){
+    .header section {
+        flex-direction: column-reverse ;
+    }
+    .header-left {
+        width: 100%;
+        text-align: center;
+    }
+    .primary-button {
+        width: 100%;
+        text-align: center;
+    }
+    .header-right img {
+        width: 100%;
+    }
+    .big-feature-container{
+        flex-direction: column;
+
+    }
+    #spl-cnt{
+        flex-direction: column-reverse;
+    }
+    .footer-container{
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+    .link-column{
+        align-items: center;
     }
 }
